# wallet713

./: .auto-release.sh  .before-deploy.sh  .dockerignore  .editorconfig  .gitignore  .rustc_info.json  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml  motd.json
.ci/: install.yml  linux-release.yml  macos-release.yml  windows-release.yml
.hooks/: pre-commit
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
doc/implementors/core/convert/: trait.From.js  trait.TryFrom.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/hash/: trait.Hash.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/easy_jsonrpc_mw/: trait.Handler.js
doc/implementors/epic_core/ser/: trait.Readable.js  trait.Writeable.js
doc/implementors/epic_keychain/extkey_bip32/: trait.BIP32Hasher.js
doc/implementors/failure/: trait.Fail.js
doc/implementors/gotham/middleware/: trait.Middleware.js  trait.NewMiddleware.js
doc/implementors/rustyline/: trait.Helper.js
doc/implementors/rustyline/completion/: trait.Completer.js
doc/implementors/rustyline/highlight/: trait.Highlighter.js
doc/implementors/rustyline/hint/: trait.Hinter.js
doc/implementors/serde/de/: trait.Deserialize.js
doc/implementors/serde/ser/: trait.Serialize.js
doc/implementors/std/error/: trait.Error.js
doc/implementors/ws/handler/: trait.Handler.js
doc/src/wallet713/: main.rs.html
doc/src/wallet713/api/: auth.rs.html  error.rs.html  listener.rs.html  mod.rs.html  router.rs.html
doc/src/wallet713/broker/: epicbox.rs.html  keybase.rs.html  mod.rs.html  protocol.rs.html  types.rs.html
doc/src/wallet713/common/: base58.rs.html  client.rs.html  config.rs.html  crypto.rs.html  error_kind.rs.html  hasher.rs.html  macros.rs.html  message.rs.html  mod.rs.html  motd.rs.html  ser.rs.html
doc/src/wallet713/contacts/: backend.rs.html  mod.rs.html  types.rs.html
doc/src/wallet713/controller/: args.rs.html  cli.rs.html  display.rs.html  mod.rs.html
doc/src/wallet713/internal/: keys.rs.html  mod.rs.html  restore.rs.html  selection.rs.html  tx.rs.html  updater.rs.html
doc/src/wallet713/wallet/: container.rs.html  error.rs.html  mod.rs.html  seed.rs.html
doc/wallet713/: all.html  fn.do_config.html  fn.enable_ansi_support.html  fn.main.html  fn.press_any_key.html  fn.welcome.html  index.html  macro.cli_message!.html  macro.cli_message.html  sidebar-items.js
doc/wallet713/api/: index.html  sidebar-items.js
doc/wallet713/api/auth/: index.html  sidebar-items.js  struct.BasicAuthMiddleware.html
doc/wallet713/api/error/: index.html  sidebar-items.js  struct.ApiError.html
doc/wallet713/api/listener/: enum.ListenerInterface.html  fn.start_epicbox.html  fn.start_keybase.html  (+9 more)
doc/wallet713/broker/: index.html  sidebar-items.js
doc/wallet713/common/: constant.COLORED_PROMPT.html  enum.RuntimeMode.html  fn.is_cli.html  fn.set_runtime_mode.html  index.html  sidebar-items.js  static.RUNTIME_MODE.html  struct.Arc.html  struct.Error.html  trait.Keychain.html  type.Mutex.html  type.MutexGuard.html  type.Result.html
doc/wallet713/contacts/: index.html  sidebar-items.js
doc/wallet713/controller/: index.html  sidebar-items.js
doc/wallet713/internal/: index.html  sidebar-items.js
doc/wallet713/wallet/: index.html  sidebar-items.js
docs/: build.md  setup.md  usage.md
src/: main.rs
src/api/: auth.rs  error.rs  listener.rs  mod.rs  router.rs
src/api/handlers/: foreign.rs  mod.rs  owner.rs
src/api/rpc/: foreign.rs  mod.rs  owner.rs
src/broker/: epicbox.rs  grinbox.rs  keybase.rs  mod.rs  protocol.rs  types.rs
src/cli/: mod.rs  parser.rs
src/common/: base58.rs  client.rs  config.rs  crypto.rs  error.rs  error_kind.rs  hasher.rs  macros.rs  message.rs  mod.rs  motd.rs  ser.rs  types.rs
src/contacts/: address_book.rs  backend.rs  mod.rs  types.rs
src/controller/: args.rs  cli.rs  commands.yml  display.rs  mod.rs
src/grinbox/: client.rs  mod.rs  types.rs
src/internal/: keys.rs  mod.rs  restore.rs  selection.rs  tx.rs  updater.rs
src/storage/: lmdb.rs  mod.rs
src/wallet/: api.rs  container.rs  error.rs  mod.rs  seed.rs  wallet.rs
src/wallet/adapter/: epicbox.rs  grinbox.rs  http.rs  keybase.rs  mod.rs
src/wallet/api/: api.rs  controller.rs  display.rs  foreign.rs  keys.rs  mod.rs  owner.rs  restore.rs  selection.rs  tx.rs  types.rs  updater.rs
src/wallet/backend/: lmdb_backend.rs  mod.rs
src/wallet/types/: acct_path_mapping.rs  args.rs  block_fees.rs  block_identifier.rs  cb_data.rs  context.rs  context_type.rs  mod.rs  node_client.rs  output_commit_mapping.rs  output_data.rs  output_status.rs  tx_log_entry.rs  tx_log_entry_type.rs  tx_proof.rs  tx_wrapper.rs  wallet_backend.rs  wallet_backend_batch.rs  wallet_info.rs  wallet_inst.rs
(+452 files in other folders)
